--- a/_draft/0.md
+++ b/_draft/0.md
@@ -1,7 +1,7 @@
 ---
-name: BBC - Europe
-url: https://www.bbc.com/
-avatar: /assets/images/bbc.png
-feed: https://feeds.bbci.co.uk/news/world/europe/rss.xml
+name: 
+url: 
+avatar: 
+feed: 
 # hideFromSiteList: true - use this if you want to hide this site from the list of sites on this page: https://eleventy-m10y.lkmt.us/sites/
 ---
