--- a/content/sites/9to5.md
+++ b/content/sites/9to5.md
@@ -1,6 +1,6 @@
 ---
 name: 9to5 Mac
 url: https://9to5mac.com/
-image: /images/9to5.png
+avatar: /images/9to5.png
 feed: https://9to5mac.com/feed/
 ---
