--- a/content/sites/404.md
+++ b/content/sites/404.md
@@ -1,6 +1,6 @@
 ---
 name: 404 Media
 url: https://www.404media.co/
-avatar: /images/404.svg
+avatar: /images/404.png
 feed: https://www.404media.co/rss/
 ---
